chore: update properties

--- a/full-app/server/src/main/resources/application.properties
+++ b/full-app/server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=ReLife
+spring.config.import=classpath:.env[.properties]
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ecycle?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
@@ -7,14 +8,15 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.data.mongodb.uri=mongodb://localhost:27017/ecycle_logs
+#spring.data.mongodb.uri=mongodb://localhost:27017/ecycle_logs
 
 server.port=8080
 
 spring.redis.host=${SPRING_REDIS_HOST}
 spring.redis.port=${SPRING_REDIS_PORT}
 
-RAZORPAY_KEY=rzp_test_NE5s95GvZsqdfp
-RAZORPAY_SECRET=PuPoar2AtCkN90OmDVZFKgTb
+razorpay.key=${RAZORPAY_KEY}
+razorpay.secret=${RAZORPAY_SECRET}
+
 #jwt.secret=MySecretKeyForJWTs
 #jwt.expiration=3600000
