--- a/full-app/server/Dockerfile
+++ b/full-app/server/Dockerfile
@@ -8,6 +8,7 @@ RUN mvn clean package -DskipTests
 # runtime
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
-COPY --from=builder /app/target/relife-backend-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=builder /app/target/*.jar app.jar
 EXPOSE 8080
+
 ENTRYPOINT ["java","-jar","/app/app.jar"]
