--- a/full-app/server/src/main/resources/application.properties
+++ b/full-app/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ReLife
-spring.config.import=classpath:.env[.properties]
+spring.config.import=optional:classpath:.env[.properties]
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ecycle?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
