--- a/full-app/server/src/main/resources/application.properties
+++ b/full-app/server/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.application.name=ReLife
 spring.config.import=optional:classpath:.env[.properties]
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ecycle?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/ecycle?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #spring.data.mongodb.uri=mongodb://localhost:27017/ecycle_logs
