--- a/MVP/package.json
+++ b/MVP/package.json
@@ -20,6 +20,8 @@
     "@tensorflow/tfjs": "^4.22.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
+    "circom": "^0.5.46",
+    "circomlib": "^2.0.5",
     "framer-motion": "^12.23.6",
     "gsap": "^3.13.0",
     "howler": "^2.2.4",
@@ -36,6 +38,7 @@
     "react-sounds": "^1.0.25",
     "react-spinners": "^0.17.0",
     "recharts": "^3.0.2",
+    "snarkjs": "^0.7.5",
     "tesseract.js": "^6.0.1",
     "three": "^0.178.0"
   },
