--- a/full-app/server/src/main/resources/application.properties
+++ b/full-app/server/src/main/resources/application.properties
@@ -14,6 +14,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #spring.data.mongodb.uri=mongodb://localhost:27017/ecycle_logs
 
+# Server compression
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/css,application/javascript,application/json,application/xml
+
+# OpenAPI bean
+springdoc.api-docs.enabled=true
+
 server.port=8080
 
 spring.redis.host=${SPRING_REDIS_HOST}
