--- a/full-app/client/package.json
+++ b/full-app/client/package.json
@@ -22,6 +22,7 @@
     "@tsparticles/slim": "^3.8.1",
     "circom": "^0.5.46",
     "circomlib": "^2.0.5",
+    "circomlibjs": "^0.1.7",
     "framer-motion": "^12.23.6",
     "gsap": "^3.13.0",
     "howler": "^2.2.4",
