feat(warmup): add /warmup endpoint, actuator and keepalive workflow
This commit implements the following:

- a /warmup endpoint  that performs idempotent, cheap initialization to reduce first-request cold-start latency.
- Enable Spring Actuator health/info endpoints and permit access to /warmup/actuator health.
- Add GitHub Actions workflow (.github/workflows/keepalive.yml) to ping /warmup every 5 minutes to keep the app awake.

--- a/full-app/server/src/main/resources/application.properties
+++ b/full-app/server/src/main/resources/application.properties
@@ -21,6 +21,11 @@ server.compression.mime-types=text/html,text/css,application/javascript,applicat
 # OpenAPI bean
 springdoc.api-docs.enabled=true
 
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=never
+
+
 server.port=8080
 
 spring.redis.host=${SPRING_REDIS_HOST}
